Changes for markdown

--- a/DSA_LAB1.ipynb
+++ b/DSA_LAB1.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Name: Myk Angelo M. Magsipoc\n",
-    "CYS: BSCPE 2-3\n",
-    "Subject: Data Structure and Algorithm\n",
-    "Lab Activity: Python Review\n",
-    "Deadline: September 22, 2024 11:59 PM"
+    " * Name: Myk Angelo M. Magsipoc\n",
+    " * CYS: BSCPE 2-3\n",
+    " * Subject: Data Structure and Algorithm\n",
+    " * Lab Activity: Python Review\n",
+    " * Deadline: September 22, 2024 11:59 PM"
    ]
   },
   {
@@ -20,9 +20,9 @@
     "Create a program that converts temperature Celcius and Fahrenheit. \n",
     "\n",
     "Instruction:\n",
-    "    1. Ask the user to input a temperature.\n",
-    "    2. Ask the user to select the conversion type: from Celsius to Fahrenheit or from Fahrenheit to Celsius\n",
-    "    3. Perform the appropriate conversion and print the result."
+    "1. Ask the user to input a temperature.\n",
+    "2. Ask the user to select the conversion type: from Celsius to Fahrenheit or from Fahrenheit to Celsius\n",
+    "3. Perform the appropriate conversion and print the result."
    ]
   },
   {
@@ -62,10 +62,10 @@
    "source": [
     "# EXERCISE 2: Ohm's Law Calculator\n",
     "Instruction:\n",
-    "    1. Ask the user what they want to calculate: Voltage, Current, or Resistance.\n",
-    "    2. Based on their choice, prompt the user to input the appropriate values.\n",
-    "    3. Use Ohm's Law to calculate the missing variable and display the result.\n",
-    "    4. Handle cases where division by zero might occur."
+    "1. Ask the user what they want to calculate: Voltage, Current, or Resistance.\n",
+    "2. Based on their choice, prompt the user to input the appropriate values.\n",
+    "3. Use Ohm's Law to calculate the missing variable and display the result.\n",
+    "4. Handle cases where division by zero might occur."
    ]
   },
   {
@@ -126,15 +126,15 @@
    "metadata": {},
    "source": [
     "# EXERCISE 3: Diamond Shape (Advance Topic)\n",
-    "Write a python function named print_diamond that takes an odd integer n as an argument and prints a diamond shape with a width of n using the * character.\n",
+    "* Write a python function named print_diamond that takes an odd integer n as an argument and prints a diamond shape with a width of n using the * character.\n",
     "\n",
-    "For n = 5 the output should be:\n",
-    "    *\n",
-    "   ***\n",
-    "  *****\n",
-    "   ***\n",
-    "    *\n",
-    "Note: If an even number is passed, the function should return \"Please provide an odd integer.\"\n"
+    "* For n = 5 the output should be:\n",
+    "    <!-- *\n",
+    "        ***\n",
+    "       *****\n",
+    "        ***\n",
+    "         * -->\n",
+    "* Note: If an even number is passed, the function should return \"Please provide an odd integer.\"\n"
    ]
   },
   {
@@ -162,6 +162,14 @@
     "# Call the function with the user's input\n",
     "print_diamond(total_n)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87fd5416",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
